added disk module

--- a/imgui.ini
+++ b/imgui.ini
@@ -35,6 +35,11 @@ Collapsed=0
 
 [Window][Network]
 Pos=5,476
-Size=366,149
+Size=366,72
+Collapsed=0
+
+[Window][Disk]
+Pos=4,552
+Size=366,74
 Collapsed=0
 
